objects/sf4twitter__Twitter_Contributor__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Authentication__c</fullName>
        <formula>IF( sf4twitter__Valid__c = false,
HYPERLINK( &quot;/apex/sf4twitter__TwitterOAuth?conId=&quot;&amp;Id&amp;&quot;&amp;retURL=/&quot;&amp; sf4twitter__TwitterAccount__r.Id , &quot;Validate&quot;, &quot;_self&quot;),
HYPERLINK(&quot;/apex/sf4twitter__TwitterOAuth?revoke=1&amp;conId=&quot;&amp;Id&amp;&quot;&amp;retURL=/&quot;&amp;sf4twitter__TwitterAccount__r.Id, &quot;Revoke&quot;, &quot;_self&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authentication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Main_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tweet as Main Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__OAuth_Secret__c</fullName>
        <label>OAuth Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__TwitterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Account</label>
        <referenceTo>sf4twitter__Twitter_Account__c</referenceTo>
        <relationshipLabel>Contributors</relationshipLabel>
        <relationshipName>Twitter_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <label>Twitter User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Twitter_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>Twitter Contributor</label>
    <nameField>
        <label>Contributor Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf4twitter__Twitter_Account_Needed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK (sf4twitter__TwitterAccount__c)</errorConditionFormula>
        <errorDisplayField>sf4twitter__TwitterAccount__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Username_different_to_main_account</fullName>
        <active>true</active>
        <description>The username of the contributor cannot be equal to the main account&apos;s username</description>
        <errorConditionFormula>UPPER(sf4twitter__Username__c)  = UPPER(sf4twitter__TwitterAccount__r.sf4twitter__Username__c)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Username__c</errorDisplayField>
        <errorMessage>Invalid username</errorMessage>
    </validationRules>
</CustomObject>